
  - Supply an error message if the user tries to configure a BuildDir
    for a directory that already has one.

  - Remove documentation of the still-unimplemented -e option.

  - Add -H help text listing the legal --debug values.

  - Don't choke if a construction variable is a non-string value.

  - Build Type Libraries in the target directory, not the source
    directory.

  From Greg Spencer:

  - Add support for Microsoft Visual Studio 2003 (version 7.1).

  - Evaluate $MSVSPROJECTSUFFIX and $MSVSSOLUTIONSUFFIX when the Builder
    is invoked, not when the tool is initialized.

  From Christoph Wiedemann:

  - When compiling Qt, make sure the moc_*.cc files are compiled using
    the flags from the environment used to specify the target, not
    the environment that first has the Qt Builders attached.



RELEASE 0.94 - Fri, 07 Nov 2003 05:29:48 -0600

  From Hartmut Goebel:

  - Add several new types of canned functions to help create options:
    BoolOption(), EnumOption(), ListOption(), PackageOption(),
    PathOption().

  From Steven Knight:

  - Fix use of CPPDEFINES with C++ source files.

  - Fix env.Append() when the operand is an object with a __cmp__()
    method (like a Scanner instance).

  - Fix subclassing the Environment and Scanner classes.

  - Add BUILD_TARGETS, COMMAND_LINE_TARGETS and DEFAULT_TARGETS variables.

  From Steve Leblanc:

  - SGI fixes:  Fix C++ compilation, add a separate Tool/sgic++.py module.

  From Gary Oberbrunner:

  - Fix how the man page un-indents after examples in some browsers.

  From Vincent Risi:

  - Fix the C and C++ tool specifications for AIX.



RELEASE 0.93 - Thu, 23 Oct 2003 07:26:55 -0500

  From J.T. Conklin:

  - On POSIX, execute commands with the more modern os.spawnvpe()
    function, if it's available.

  - Scan .S, .spp and .SPP files for C preprocessor dependencies.

  - Refactor the Job.Parallel() class to use a thread pool without a